NMJ Salesforce Project/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Level_of_Interest__c</fullName>
        <label>Level of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Tell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Seq__c</fullName>
        <label>Planned Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selection</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>